# orranger

./: CMakeLists.txt  README.md  clean_up.cmake
src/backend/: CMakeLists.txt
src/backend/processors/: CMakeLists.txt
src/backend/processors/audio_gen/: CMakeLists.txt
src/backend/processors/audio_gen/cpp/: audio_gen.cpp
src/backend/processors/audio_gen/hpp/: audio_gen.hpp
src/backend/processors/dummy/: CMakeLists.txt
src/backend/processors/dummy/cpp/: dummy.cpp
src/backend/processors/dummy/hpp/: dummy.hpp
src/backend/reactor/: CMakeLists.txt
src/backend/reactor/cpp/: main.cpp  moderator.cpp  reactor.cpp
src/backend/reactor/hpp/: moderator.hpp  reactor.hpp
src/frontends/basic/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  run.cpp  run.hpp
src/frontends/common/: gui_events.hpp
src/frontends/default/: CMakeLists.txt  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
